[tool.poetry]
name = "dbt-operator"
version = "1.0.0"
description = "dbt execution image with a dbt project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "dbt_operator_project"}]

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "1.7.4"
pyyaml = "6.0.1"
jinja2 = "3.1.2"
click = "8.1.7"
requests = "2.31.0"
great-expectations = "0.18.5"
structlog = "23.2.0"
jsonschema = "4.19.2"
python-dateutil = "2.8.2"
pandas = "2.1.4"
python-dotenv = "1.0.0"

# Database adapters (uncomment as needed)
# dbt-postgres = "1.7.4"
# dbt-snowflake = "1.7.4"
# dbt-bigquery = "1.7.4"
# dbt-redshift = "1.7.4"
# dbt-databricks = "1.7.4"
# dbt-spark = "1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt-run = "dbt_operator_project.cli:run"
dbt-test = "dbt_operator_project.cli:test"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

